Add bus, MVVM, getting bus list from firestore and display it in the buses fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.EASYTRAVELS"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activities.AddBus"
+            android:exported="false" />
+        <activity
             android:name=".loginandsignup.ForgotPasswordActivity"
             android:exported="false" />
         <activity
