--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,23 @@
         android:theme="@style/Theme.EASYTRAVELS"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activities.Booking"
+            android:exported="false" />
+        <activity
             android:name=".ui.activities.AddBus"
             android:exported="false" />
         <activity
             android:name=".loginandsignup.ForgotPasswordActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.noActionBar"/>
         <activity
             android:name=".loginandsignup.SignUpActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.noActionBar"/>
         <activity
             android:name=".loginandsignup.LoginActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.noActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +40,7 @@
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.EASYTRAVELS.NoActionBar" />
+            android:theme="@style/Theme.noActionBar" />
     </application>
 
 </manifest>
